# MoodFlix-

./: README.md
Rag project/: db.py  debug_llm.py  main.py  pyproject.toml  query.py  rag.py  requirements.txt  test_api.py
frontend/: bun.lockb  index.html
frontend/src/: App.tsx  index.css
