[project]
name = "rag-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastapi>=0.135.3",
    "json-repair>=0.58.7",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.26",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "pymongo>=4.16.0",
    "pymupdf>=1.27.2.2",
    "pypdf>=6.9.2",
    "requests>=2.33.1",
    "sentence-transformers>=5.3.0",
    "uvicorn[standard]>=0.44.0",
]
